# Mesh-Capital

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: mesh.py  perp.py  route.py  vault.py
backend/app/services/: __init__.py  compound_vault.py  mesh.py  perp_engine.py  registry.py  router.py  solana_client.py
backend/app/utils/: __init__.py  cache.py  helpers.py  logger.py  rate_limiter.py  retry.py
backend/scripts/: simulate.py
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Perps.vue  Route.vue  Vaults.vue
tests/: test_mesh.py  test_perp_and_vault.py  test_router.py
