[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mesh-capital-backend"
version = "0.1.0"
description = "Unified liquidity layer for Solana — smart routing, perps, and compounding"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0", "flask-cors>=4.0.0",
    "httpx>=0.27.0", "python-dotenv>=1.0.0", "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
